<resources>
    <string name="app_name">sensorApplication</string>
    <string name="appTitle">System Monitoring Application</string>
    <string name="sensorButton">Show All Sensors Available</string>
    <string name="sensorSpinner">Sensors</string>
    <string name="samplingRate"><u>Sampling Rate Choices</u></string>
    <string name="Accelerometer"><u>Accelerometer Readings:</u></string>
    <string name="Gyroscope"><u>Gyroscope Readings:</u></string>
    <string name="radFast">Fast</string>
    <string name="radNormal">Normal</string>
    <string name="radGame">Game</string>
    <string name="radUI">UI</string>
    <string name="fahrenheit">°F</string>
    <string name="Celsius">°C</string>
    <string name="logs">View Logs</string>
    <string name="Guide">

            \u25CF The Splash Screen of the application shows the Version Number and Release as well as the logo of the application \n \n
            \u25CF The Main Hub shows the Model and Brand of the phone  \n \n
            \u25CF There is an option to view all available sensors on the phone and their details with the view all sensors button\n \n
            \u25CF The Bar below the button to view all sensors calculates the remaining available storage on the phone and displays it to the user \n \n
            \u25CF The Top Left Icon takes the user to a view of the Internal battery sensors showing details like battery health, percentage, voltage etc... \n\n
            \u25CF The bottom left icon takes the user to all environmental sensors displaying information around the phone like pressure and light \n\n
            \u25CF The top right icon directs the user to motion sensors which track the built in accelerometer and gyroscope as the phone changes physical position \n\n
            \u25CF The user is given the option to change the sampling rate from the built in rates in the android device for the motion sensors and environmental \n \n
            \u25CF Sampling rate values are: \n Fastest - quickest possible \n Game - a rate suitable for games \n UI - suitable for user interface \n Normal - suitable for orientation changes

    </string>

</resources>